# ooosvn

./: .gitignore  CMakeLists.txt  README.md  _update.xml  buildscript  changes.txt  revert.sh  tag.sh  userguide.fodt
0.3/: CMakeLists.txt
0.3/extension/: AddonConfiguration.xcu  changes.txt  description.xml
0.3/extension/ooosvn/: DlgRepoAdd.xdl  DlgRepoEdit.xdl  DlgRepoSelect2.xdl  dialog.xlb  script.xlb
0.3/ooosvn/: buildscript
0.3/ooosvn/extension/: Addons.xcu  description.xml  readme.txt
0.3/ooosvn/extension/ooosvn/: Config.xba  DlgHelp.xdl  Module1.xba  UserGuide.xba  dialog.xlb  script.xlb
0.3/ooosvn/extension/pkg-desc/: pkg-description.txt
0.3/ooosvn/userguide/: content.xml
0.3/userguide/: layout-cache
commandline/: bulklist.sh  import.sh  listdocuments.sh  listversions.sh  readme.txt  revert.sh  thumbnails.sh  userguide.sh
extension/: AddonConfiguration.xcs  AddonConfiguration.xcu  Addons.xcu  CMakeLists.txt  changes.txt  description.xml  readme.txt
extension/bashscripts/: bulklist.sh  commit.sh  import.sh  listdocuments.sh  listversions.sh  revert.sh  thumbnails.sh  userguide.sh
extension/ooosvn/: BulkImport.xba  Config.xba  DlgBulkImport.xdl  DlgBulkImportEnd.xdl  DlgBulkImportStart.xdl  DlgHelp.xdl  DlgImportUUID.xdl  DlgPackageCheck.xdl  DlgRepoManager.xdl  DlgRepoSelect.xdl  FileTypeCheck.xba  Module1.xba  OOoEvents.xba  UUID.xba  UnitImport.xba  UserGuide.xba  VerifyDocStatus.xba  Zip.xba  dialog.xlb  installation.xba  script.xlb
extension/pkg-desc/: pkg-description.txt
ooosvn/: DlgLog.xdl  Module1.xba  dialog.xlb
shellscripts/: commit.sh  import.sh  listdocuments.sh  listversions.sh  revert.sh  tag.sh  thumbnails.sh  userguide.sh
userguide/: content.xml  meta.xml  settings.xml  styles.xml
